<resources>
    <string name="app_name">Jahezly</string>
    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">User Phone</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="student_name">Student Name</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="user_name">User Name</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="choose_stage">Choose Stage</string>
    <string name="choose_classe">Choose Class</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="something">Check internet connection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pas_short">password too short</string>
    <string name="current">Current</string>
    <string name="late">Late</string>
    <string name="finished">Finished</string>
    <string name="search">Search...</string>
    <string name="reserve_order">Reserve order</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="family">Family</string>
    <string name="people">People</string>
    <string name="time">Time</string>
    <string name="change">Change</string>
    <string name="reservation">Reservation</string>
    <string name="people2">People</string>
    <string name="children">Children</string>
    <string name="inside">Inside</string>
    <string name="outside">Outside</string>
    <string name="send">Send</string>
    <string name="ch_reserv_type">Choose reservation type</string>
    <string name="ch_reserve_time">Choose reservation time</string>
    <string name="ch_reserve_date">Choose reservation date</string>
    <string name="date">Date</string>
    <string name="time2">Time</string>
    <string name="seat">Seat</string>
    <string name="orders">Orders</string>
    <string name="change_language">Change Language</string>
    <string name="order_details">Order details</string>
    <string name="user_pas_not_correct">Username or password incorrect</string>
    <string name="client_name">Client name</string>
    <string name="order_num">Order num</string>
    <string name="sar">SAR</string>
    <string name="no_order_to_show">No order to show</string>
    <string name="amount">Amount</string>
    <string name="drinks">Drinks</string>
    <string name="no_drinks">No Drinks</string>
    <string name="additions">Additions</string>
    <string name="no_search_results">No search results</string>
    <string name="order_number">Order number....</string>
    <string name="code_not_found">Code not found</string>
    <string name="back">Back</string>
</resources>
