<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="model"
            type="com.jahezly.models.OrderModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/small_rounded_gray_stroke"
            android:padding="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/client_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray4"
                    android:textSize="15sp"
                    android:text="@{model.client.name}"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/phone_number"
                    android:singleLine="true"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray4"
                    android:textSize="15sp"
                    android:text="@{model.client.phone}"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/order_num"
                    android:singleLine="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray4"
                    android:textSize="15sp"
                    android:text='@{"#"+model.id}'
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/people2"
                    android:singleLine="true"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/gray4"
                    android:textSize="15sp"
                    android:text="@{model.number_of_person}"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/seat"
                    android:singleLine="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray4"
                    android:textSize="15sp"
                    android:text='@{model.session_place.equals("in")?@string/inside:@string/outside}'
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/children"
                    android:singleLine="true"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray4"
                    android:textSize="15sp"
                    android:text="@{model.number_of_child}"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"

                    />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:text='@{model.total_price+" "+@string/sar}'
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"

                >
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <Button
                        android:id="@+id/btnDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="@drawable/small_rounded_primary"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/order_details"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        />
                </FrameLayout>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src='@{model.pay_type.equals("cash")?@drawable/cash:@drawable/mada}'
                    />

            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/rounded_white_bg"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/gray4"
            order_date='@{Long.parseLong(model.order_date)}'
            order_time="@{Long.parseLong(model.order_time)}"
            />
    </LinearLayout>
</layout>