<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="model"
            type="com.jahezly.models.AddOrderModel" />
        <variable
            name="lang"
            type="String" />
        <variable
            name="backListener"
            type="com.jahezly.interfaces.Listeners.BackListener" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetEnd="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{()->backListener.back()}"

                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_left_arrow"
                    android:tint="@color/white"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reserve_order"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/reservation"
                    android:layout_gravity="center_horizontal"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/small_rounded_gray"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginTop="20dp"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_user"
                        android:tint="@color/colorPrimary"
                        />
                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:hint="@string/name"
                        android:textColorHint="@color/gray4"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@={model.name}"
                        error="@{model.error_name}"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/small_rounded_gray"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginTop="20dp"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_call"
                        android:tint="@color/colorPrimary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:text="+966"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:hint="@string/phone_number"
                        android:textColorHint="@color/gray4"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:inputType="number"
                        android:maxLength="9"
                        android:text="@={model.phone}"
                        error="@{model.error_phone}"
                        />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/small_rounded_gray"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginTop="20dp"
                    >
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <RadioButton
                            android:id="@+id/rbFamily"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/gray10"
                            android:textSize="15sp"
                            android:text="@string/family"
                            android:button="@drawable/rb_bg"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            />

                        <RadioButton
                            android:id="@+id/rbPeople"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/gray10"
                            android:textSize="15sp"
                            android:text="@string/people"
                            android:button="@drawable/rb_bg"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            />


                    </RadioGroup>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/small_rounded_gray"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginTop="20dp"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_clock"
                        android:tint="@color/colorPrimary"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:hint="@string/time"
                        android:textColorHint="@color/gray4"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:gravity="center_vertical"
                        android:text='@{!model.date.isEmpty()?(!model.formatTime.isEmpty()?model.date+"-"+model.formatTime:model.date):""}'
                        />
                    <TextView
                        android:id="@+id/tvChange"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17sp"
                        android:text="@string/change"
                        android:gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/small_rounded_gray"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginTop="20dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:hint="@string/people2"
                        android:textColorHint="@color/gray10"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center_vertical"
                        />
                    <ImageView
                        android:id="@+id/imgIncreasePeople"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/circle_white"
                        android:src="@drawable/ic_add"
                        android:padding="5dp"
                        />
                    <TextView
                        android:id="@+id/tvCounterPeople"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{String.valueOf(model.peopleNumber)}"/>

                    <ImageView
                        android:id="@+id/imgDecreasePeople"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/circle_white"
                        android:src="@drawable/ic_minus"
                        android:padding="5dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/small_rounded_gray"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginTop="20dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:hint="@string/children"
                        android:textColorHint="@color/gray10"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center_vertical"
                        />
                    <ImageView
                        android:id="@+id/imgIncreaseChildren"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/circle_white"
                        android:src="@drawable/ic_add"
                        android:padding="5dp"
                        />
                    <TextView
                        android:id="@+id/tvCounterChildren"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{String.valueOf(model.childrenNumber)}"/>



                    <ImageView
                        android:id="@+id/imgDecreaseChildren"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/circle_white"
                        android:src="@drawable/ic_minus"
                        android:padding="5dp"
                        />
                </LinearLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/small_rounded_gray"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginTop="20dp"
                    >
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <RadioButton
                            android:id="@+id/rbInside"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/gray10"
                            android:textSize="15sp"
                            android:text="@string/inside"
                            android:button="@drawable/rb_bg"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:checked="true"
                            />

                        <RadioButton
                            android:id="@+id/rbOutside"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/gray10"
                            android:textSize="15sp"
                            android:text="@string/outside"
                            android:button="@drawable/rb_bg"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            />


                    </RadioGroup>


                </FrameLayout>

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/small_rounded_primary"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/send"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
